
  * Build-dep on libdav1d-dev and delete the bundled third_party/dav1d.
  * d/patches:
    - ppc64le/third_party/0001-Add-PPC64-support-for-libdav1d.patch,
      ppc64le/third_party/0001-Fix-libdav1d-compilation-on-clang-ppc.patch,
      ppc64le/third_party/0003-thirdparty-fix-dav1d-gn.patch,
      fixes/arm64-ftbfs.patch: drop these 4 patches that are only needed
      for bundled libdav1d.

 -- Andres Salomon <dilinger@debian.org>  Thu, 25 Apr 2024 19:07:35 -0400

chromium (124.0.6367.78-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-4058: Type Confusion in ANGLE.
      Reported by Toan (suto) Pham and Bao (zx) Pham of Qrious Secure.
    - CVE-2024-4059: Out of bounds read in V8 API. Reported by Eirik.
    - CVE-2024-4060: Use after free in Dawn. Reported by wgslfuzz.

 -- Andres Salomon <dilinger@debian.org>  Thu, 25 Apr 2024 19:07:35 -0400

chromium (124.0.6367.60-2) unstable; urgency=high

  * d/patches/ppc64le:
     - third_party/0001-Add-PPC64-support-for-boringssl.patch: update for
       upstream boringssl changes and reenable
     - third_party/0003-third_party-ffmpeg-Add-ppc64-generated-config.patch:
       regenerate from new ffmpeg source tree
     - third_party/skia-vsx-instructions.patch: update for upstream changes

  [ Andres Salomon ]
  * d/patches:
    - fixes/arm64-ftbfs.patch: add arm64-specific ftbfs fix for libdav1d.
    - upstream/ozone1.patch, upstream/ozone2.patch: backport fixes for
      broken wayland support (closes: #1069586).

 -- Timothy Pearson <tpearson@debian.org>  Thu, 25 Apr 2024 15:21:00 -0500

chromium (124.0.6367.60-1) unstable; urgency=high

  * New upstream stable release.
    - CVE-2024-3832: Object corruption in V8.
      Reported by Man Yue Mo of GitHub Security Lab.
    - CVE-2024-3833: Object corruption in WebAssembly.
      Reported by Man Yue Mo of GitHub Security Lab.
    - CVE-2024-3914: Use after free in V8. Reported by Seunghyun Lee