@@ -8,6 +8,11 @@ chromium (124.0.6367.78-2) UNRELEASED; urgency=high
       fixes/arm64-ftbfs.patch: drop these 4 patches that are only needed
       for bundled libdav1d.
 
+  [ Timothy Pearson ]
+  * d/patches/ppc64le:
+    - third_party/0001-Add-PPC64-support-for-boringssl.patch: Fix inadvertent
+      breakage of i386 build
+
  -- Andres Salomon <dilinger@debian.org>  Thu, 25 Apr 2024 19:07:35 -0400
 
 chromium (124.0.6367.78-1) unstable; urgency=high
